--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -231,6 +231,19 @@
             margin-right: 450px;
         }
 
+        .footer-bottom {
+            padding: 36px;
+            background-color: #181c23;
+
+            font-size: 12px;
+        }
+        .footer-bottom a,
+        .footer-bottom span{
+            text-decoration: none;
+            color: #c3cbd7;
+        }
+
+
     </style>
     <script th:inline="javascript">
         let airports = [];
@@ -338,7 +351,7 @@
                 <span class="fa fa-angle-down ml-2"></span>
             </a>
             <div class="dropdown-menu text-center text-capitalize mt-4" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#">Edit profile</a>
+                <a class="dropdown-item" th:href="@{/profile}">Edit profile</a>
                 <a class="dropdown-item" id="logout" th:href="@{/logout}">Logout</a>
             </div>
         </div>
