--- a/src/main/resources/templates/home/myCards.html
+++ b/src/main/resources/templates/home/myCards.html
@@ -79,6 +79,8 @@
         .navbar-links a:hover {
             /*background-color: #20242c;*/
             color: white;
+            border-bottom: 3px solid red;
+
         }
 
         .navbar-link {
@@ -88,21 +90,42 @@
             font-size: 18px;
         }
 
-        .navbar-link:hover {
-            border-bottom: 3px solid red;
+
+        .dropdown-menu {
+            transition: .2s;
+            position: absolute !important;
+            top: 100% !important;
+            left: 0 !important;
+            width: 100px !important;
+            background-color: #232b38 !important;
+            z-index: 1 !important;
+            padding: 0;
+            border-bottom-right-radius: 5px;
+            border-bottom-left-radius: 5px;
+        }
+
+        .dropdown-toggle::after {
+            content: none;
+        }
+
+        .dropdown-menu a {
+            display: block;
+            padding: 15px 0;
+            text-decoration: none;
+        }
+
+        .dropdown-menu a:hover {
+            background-color: #20242c;
         }
 
         #logout {
-            color: #ececec;
-            /*border-radius: 3px;*/
-            border-bottom: 3px solid red;
-            transition: .2s;
+            border-bottom-right-radius: 5px;
+            border-bottom-left-radius: 5px;
         }
 
         #logout:hover {
-            border: 3px solid red;
-            background-color: red;
-            color: white;
+            background-color: #f01c34;
+            border: 3px solid #f01c34;
         }
 
         :root {
@@ -244,11 +267,19 @@
         <a th:href="@{/home}"><img src="https://cdn.turkishairlines.com/m/2190da9e53a70e4e/original/THY-LOGO.png"
                                    class="d-none d-lg-block d-xl-block d-xxl-block" height="40px"></a>
     </div>
-    <div class="navbar-links nav navbar-nav flex-row mega-menu-main mr-5 d-none d-md-flex flex-for-desktop float-end">
-        <a th:href="@{/cards}" id="card-link" class="navbar-link">CARDS</a>
+    <div class="navbar-links nav navbar-nav flex-row mega-menu-main mr-3 d-none d-md-flex flex-for-desktop float-end">
+        <a th:href="@{/cards}" class="navbar-link">CARDS</a>
         <a th:href="@{/reservations}" class="navbar-link">MY FLIGHTS</a>
-        <a class="navbar-link" href="#" style="text-align: center">EMIR <i class="fa fa-angle-down ml-2" aria-hidden="true"></i></a>
-        <a th:href="@{/login}"  id="logout" style="text-align: center">LOGOUT</a>
+        <div class="dropdown">
+            <a class="navbar-link text-uppercase font-weight-bold dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <th:block sec:authentication="principal.name"></th:block>
+                <span class="fa fa-angle-down ml-2"></span>
+            </a>
+            <div class="dropdown-menu text-center text-capitalize mt-4" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" th:href="@{/profile}">Edit profile</a>
+                <a class="dropdown-item" id="logout" th:href="@{/logout}">Logout</a>
+            </div>
+        </div>
     </div>
 </nav>
 
